# transformer

./: .gitignore  CMakeLists.txt  LICENSE
include/transformer/layers/: linear.h
include/transformer/math/: activation.h  normalize.h  softmax.h  stats.h  vector.h
include/transformer/matrix/: matrix.h  matrix_math.h  matrix_ops.h
include/transformer/memory/: allocator.h  memory_pool.h
include/transformer/tensor/: tensor.h  tensor_ops.h  tensor_shape.h
include/transformer/utils/: random.h
src/layers/: linear.c
src/math/: activation.c  normalize.c  softmax.c  stats.c  vector.c
src/matrix/: matrix.c  matrix_math.c  matrix_ops.c
src/memory/: allocator.c  memory_pool.c
src/tensor/: tensor.c  tensor_ops.c  tensor_shape.c
src/utils/: random.c
